--- a/assets/plupload-image.css
+++ b/assets/plupload-image.css
@@ -91,6 +91,10 @@ div.rwmb-drag-drop-inside p {
 	margin: 5px 0;
 }
 
+.hover-drag-block {
+    background: #238AC2
+}
+
 .rwmb-images div{
 	color: #fff;
 	font-weight: bold;
